# add_lib

./: CMakeLists.txt
cmake-modules/: BuildArmadillo.cmake  BuildBOOST.cmake  BuildMLPACK.cmake  BuildOpenBLAS.cmake  run_boost_config.sh.cmake
